--- a/home/styles.css
+++ b/home/styles.css
@@ -24,8 +24,12 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+@font-face {
+	font-family: Arial_Black;
+	src: url(assets/arial_black.ttf);
+}
 body {
-	font-family: Arial Black;
+	font-family: Arial_Black;
 	line-height: 1;
 }
 @media (hover) and (min-width: 600px) {
