--- a/slow-moving-crisis/styles.css
+++ b/slow-moving-crisis/styles.css
@@ -1,4 +1,4 @@
-/* CSS style reset */
+ CSS style reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -31,54 +31,41 @@ footer, header, hgroup, menu, nav, section {
 body{
 		font-family: Helvetica;
 		line-height: 1;
-		/*background-color: #000;*/
 	}
-@media (hover) and (min-width: 10px) {
-
-	#container{
-		position: fixed;
-		top: 0;
-		left: 50vw;
-		transform: translate(-50%, 0%);
-	}
-	#clockface{
-	    border-radius: 50%;
-	    behavior: url(PIE.htc);
-	    width:100%;
-	    height:100%;
-	    background: #f0f0f0;
-	    border: 1px solid black;
-	}
-	.numbers{
-		opacity: 0;
-		display: inline-block;
-		position: fixed;
-		text-align: center;
-		transform: translate(-50%, -50%);
-	}
-	#hourCont{
-		position: fixed;
-		top: 0;
-		transform: rotate(0deg);
-		/*border: 1px solid red;*/
-	}
-	#minCont{
-		position: fixed;
-		top: 0;
-		transform: rotate(0deg);
-		/*border: 1px solid blue;*/
-	}
-	#redSnail, #blueSnail{
-		position: fixed;
-		width: 100%;
-	}
+#container{
+	position: fixed;
+	top: 0;
+	left: 50vw;
+	transform: translate(-50%, 0%);
 }
-@media (hover) and (min-width: 800px) {
-	
-	#container{
-		position: fixed;
-		top: 50vh;
-		left: 50vw;
-		transform: translate(-50%, -50%);
-	}
+#clockface{
+    border-radius: 50%;
+    behavior: url(PIE.htc);
+    width:100%;
+    height:100%;
+    background: #f0f0f0;
+    border: 1px solid black;
+}
+.numbers{
+	opacity: 0;
+	display: inline-block;
+	position: fixed;
+	text-align: center;
+	transform: translate(-50%, -50%);
+}
+#hourCont{
+	position: fixed;
+	top: 0;
+	transform: rotate(0deg);
+	/*border: 1px solid red;*/
+}
+#minCont{
+	position: fixed;
+	top: 0;
+	transform: rotate(0deg);
+	/*border: 1px solid blue;*/
+}
+#redSnail, #blueSnail{
+	position: fixed;
+	width: 100%;
 }
