--- a/slow-moving-crisis/styles.css
+++ b/slow-moving-crisis/styles.css
@@ -51,7 +51,7 @@ img{
     box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-    border: 2px solid black;
+    /*border: 2px solid black;*/
 }
 .numbers{
 	opacity: 0;
