--- a/home/styles.css
+++ b/home/styles.css
@@ -1,10 +1,8 @@
-/* CSS style reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+small, strike, strong, sub, sup, tt, var, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -30,8 +28,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	font-family: Arial_Black;
-	line-height: 1;
-	background-color: white;
+	line-height: 1.05;
+	/*background-color: white;*/
 	/*mix-blend-mode: difference;*/
 }
 div{
