--- a/periodical-logo/styles.css
+++ b/periodical-logo/styles.css
@@ -32,7 +32,6 @@ body {
 	top: 50vh;
 	left: 50vw;
 	transform: translate(-50%, -50%);
-	/*background-color: yellow;*/
 }
 #SVGcontainer{
 	width: auto;
@@ -46,42 +45,44 @@ body {
 	width: 100%;
 	display: grid;
 	grid-template-columns: repeat(9, auto);
-	/*background-color: green;	*/
 }
 .grid{
+	padding: 20px 35px 20px 35px;
 	display: grid;
 	grid-template-columns: repeat(5,30px);
-	grid-template-rows: repeat(7,30px);
-	/*border: 1px solid black;*/
-}
-.space{
-	width: 80px;
-	height: 210px;
-	/*border: 1px solid red;*/
+	grid-template-rows: repeat(6,30px);
+	/*background-color: #999;*/
+	/*border: 1px solid #999 ;*/
 }
 .pixels{
 	margin: 3px;
-	/*width: 100%;*/
-	/*height: 100%;*/
 	width: 24px;
 	height: 24px;
 	background-color: #000;
 	z-index: 10000;
+	/*mix-blend-mode: difference;*/
+	
 	/*border-radius: 100%;*/
+}
+.pixel-round{
+	margin: 3px;
+	width: 24px;
+	height: 24px;
+	background-color: #000;
+	z-index: 10000;
 }
 .data{
 	margin: 3px;
-	/*width: 100%;*/
-	/*height: 100%;*/
 	width: 24px;
 	height: 24px;
 	border-radius: 100%;
 	background-color: #29ABE2;
+	opacity: 0;
 }
 .line{
 	padding:0px;
 	margin:0px;
-	height:6px;
+	height:8px;
 	background-color:#000;
 	line-height:1px;
 	position:absolute;
@@ -89,9 +90,15 @@ body {
 .dataline{
 	padding:0px;
 	margin:0px;
-	height:4px;
+	height:6px;
 	background-color:#29ABE2;
 	/*opacity: 0;*/
 	line-height:1px;
 	position:absolute;
+	transition-duration: 300ms;
+	transition-property: width;
+}
+#DataLine0, #DataLine4, #DataLine7, #DataLine9{
+	/*background-color: #f07;*/
+	background-color: #29ABE2;
 }
